Upgrade Java version to 21 in pom.